--- a/style/main.css
+++ b/style/main.css
@@ -122,10 +122,10 @@ h1.title {
     animation-fill-mode: both; }
 
 .score-container:after {
-  content: "Score"; }
+  content: "Wynik"; }
 
 .best-container:after {
-  content: "Best"; }
+  content: "Top"; }
 
 p {
   margin-top: 0;
